--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -44,6 +44,7 @@
 
 .card-container {
   position: relative;
+  width: 21rem;
 }
 
 .card-header {
@@ -51,7 +52,6 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
-  gap: 9rem;
 }
 
 .card-title {
