--- a/src/pages/MainPage/index.scss
+++ b/src/pages/MainPage/index.scss
@@ -1,13 +1,37 @@
 @use "../../styles/main.scss";
 
-.main {
+.main-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
   height: 100vh;
   background-color: main.$bg-color;
-  width: 100%;
+}
+
+.main-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(auto-fill, 9rem);
+  grid-template-columns: 21rem repeat(3, 20rem);
+  grid-template-rows: repeat(2, 9rem);
+  grid-column-gap: 2rem;
   grid-row-gap: 10rem;
-  grid-column-gap: 1rem;
   padding:4rem ;
+}
+
+.header-container {
+  grid-area: 1 / 1 / 3 / 1;
+}
+
+.main-header {
+
+  display: flex;
+  background-color: main.$blue;
+  border-radius: 1rem;
+  position: relative;
+}
+
+.btn {
+  background: none;
+  border: none;
+  color: main.$white;
 }
